Add a default site to server

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,6 +28,7 @@ http {
 
     #gzip  on;
 
+    include /etc/nginx/default-site.conf;
     include /etc/nginx/non-managed-hosts/*.conf;
     include /etc/nginx/managed-hosts/*.conf;
 }
